move basic example into its own folder

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <script src="ARcad.web.js"></script>
+    <script src="/ARcad.web.js"></script>
   </head>
   <body>
     <div id="myContent" style="position:absolute;top:0px;left:0px"></div>
     <script>
       let container = document.querySelector("#myContent");
-      let arcad = new ARcad(container, "default.svg");
+      let arcad = new ARcad(container, "/default.svg");
 
       console.log("Listening for:", "fluxels-updated")
       arcad.on("fluxels-updated", (e) => {
