add maximum distance when moving to neighbours with keyboard

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -3,7 +3,7 @@
     <script src="../../build/ARcad.web.js"></script>
   </head>
   <body>
-    <div id="myContent" style="width:100%;height:100%;position:absolute;top:0px;left:0px"></div>
+    <div id="myContent" style="overflow:hidden;width:100%;height:100%;position:absolute;top:0px;left:0px"></div>
     <script>
 
       window.init = () => {
